# 1-acquire-Initial-floor-plan-layout

./: README.md  config.py  pyproject.toml  readme.md  requirements.txt
data/output/: parsed_cad_layout.json  parsed_image_layout.json  parsed_video_layout.json
src/: jarvis.py  main.py
src/core/: cad_parser.py  image_processor.py  numpy_encoder.py  room_object_detect.py  room_object_detection.py  self_practice.py  video_edge_and_line_detection.py  video_processor.py
src/core/phase1/: visualize_layout.py
src/core/phase2/: IRS_channel_estimation.ipynb
src/core/phase2/older_approach/: 2D-grid-from-disparity-map&edges.py
src/utils/: floorplan_opener.py
tests/unit/: test_cad_parser.py  test_image_processor.py
